<resources>
    <string name="app_name">GuideMetro</string>
    <string name="map">Map</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="email">E-mail</string>
    <string name="emailAccount">E-mail:</string>
    <string name="password">Password</string>
    <string name="log">Log In</string>
    <string name="sign">Sign Up</string>
    <string name="passwordConfirm">Confirm Password</string>
    <string name="signOut">Sign Out</string>
    <string name="sendButtonDescription">Icon</string>
    <string name="changeLanguage">Change Language</string>
    <string name="back">Back</string>
    <string name="myReview">My Reviews</string>
    <string name="myFavorite">My Favorite</string>
    <string name="fav">Add to favorite</string>
    <string name="delete">Delete</string>
    <string name="review">Review</string>
    <string name="rate">Average Rating</string>
    <string name="search">Search</string>
    <string name="sendReview">Send Review</string>
    <string name="stReview">Write a review about the station</string>
    <string name="stReviews">Reviews of the station</string>
    <string name="novoslobodskaya">Novoslobodskaya</string>
    <string name="prospektmira">Prospekt Mira</string>
    <string name="komsomolskaya">Komsomolskaya</string>
    <string name="kurskaya">Kurskaya</string>
    <string name="taganskaya">Taganskaya</string>
    <string name="paveletskaya">Paveletskaya</string>
    <string name="dobryninskaya">Dobryninskaya</string>
    <string name="oktyabrskaya">Oktyabrskaya</string>
    <string name="parkkultury">Park Kultury</string>
    <string name="kiyevskaya">Kiyevskaya</string>
    <string name="krasnopresnenskaya">Krasnopresnenskaya</string>
    <string name="belorusskaya">Belorusskaya</string>

</resources>